--- a/mobile2fa/Linq2FA/app/src/main/res/values/strings.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/values/strings.xml
@@ -140,4 +140,8 @@
   <string name="result_wifi">Found WLAN Configuration</string>
   <string name="sbc_name">Google Book Search</string>
   <string name="wifi_changing_network">Requesting connection to network\u2026</string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 </resources>
