--- a/mobile2fa/Linq2FA/app/src/main/res/values/strings.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/values/strings.xml
@@ -140,8 +140,9 @@
   <string name="result_wifi">Found WLAN Configuration</string>
   <string name="sbc_name">Google Book Search</string>
   <string name="wifi_changing_network">Requesting connection to network\u2026</string>
-
-
+  <string name="nextbtn_account_activation" translatable="false">Next</string>
+  <string name="previousbtn_account_activation" translatable="false">Previous</string>
+  <string name="bin_password_text" translatable="false">Enter Your Account Pin Password (at least 8 alphanumeric)</string>
 
 
 </resources>
