--- a/mobile2fa/Linq2FA/app/src/main/res/values/strings.xml
+++ b/mobile2fa/Linq2FA/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
  limitations under the License.
  -->
 <resources>
-  <string name="app_name">Linq2FA</string>
-  <string name="appname" translatable="false">Nadec-IS</string>
+  <string name="app_name">Linq2FA (1.2)</string>
+  <string name="appname" translatable="false">Nadec-LinQ2FA</string>
   <string name="app_picker_name">Applications</string>
   <string name="bookmark_picker_name">Bookmarks</string>
   <string name="button_add_calendar">Add to calendar</string>
@@ -143,7 +143,8 @@
   <string name="wifi_changing_network">Requesting connection to network\u2026</string>
   <string name="nextbtn_account_activation" translatable="false">Next</string>
   <string name="previousbtn_account_activation" translatable="false">Previous</string>
-  <string name="bin_password_text" translatable="false">Enter Your Account Pin Password (at least 8 alphanumeric)</string>
+  <string name="bin_password_text" translatable="false">Choose your Application PIN (at least 4 alphanumeric)</string>
+  <string name="pin_password_verify_text" translatable="false">Please Confirm Your Application PIN</string>
 
 
 </resources>
